[gd_scene load_steps=10 format=3 uid="uid://bt4gsxrtdneyy"]

[ext_resource type="AudioStream" uid="uid://emdieiax43j1" path="res://sfx/bones_gained.wav" id="1_1n7et"]
[ext_resource type="Script" path="res://sfx/sfx.gd" id="1_mcm8r"]
[ext_resource type="AudioStream" uid="uid://dsa810vfsws1d" path="res://sfx/sad_customer.wav" id="3_dhiqe"]
[ext_resource type="AudioStream" uid="uid://cta5g0f87dp1t" path="res://sfx/desert_song.wav" id="4_lhjhv"]
[ext_resource type="AudioStream" uid="uid://brjm6kbfwo1l3" path="res://sfx/market_song.wav" id="5_gnggn"]

[sub_resource type="Animation" id="Animation_qs8ej"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DesertSong:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_8s448"]
resource_name = "fade_to_desert"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DesertSong:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.366667, 2.63333),
"transitions": PackedFloat32Array(3.86375, 7.46426),
"update": 0,
"values": [-80.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarketSong:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.43333, 4.03333),
"transitions": PackedFloat32Array(7.46426, 6.49802),
"update": 0,
"values": [0.0, -80.0]
}

[sub_resource type="Animation" id="Animation_vrnr5"]
resource_name = "fade_to_market"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DesertSong:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.733333, 3.7),
"transitions": PackedFloat32Array(1, 6.27667),
"update": 0,
"values": [0.0, -80.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MarketSong:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.93333),
"transitions": PackedFloat32Array(1, 3.36358),
"update": 0,
"values": [-80.0, -10.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_olcjq"]
_data = {
"RESET": SubResource("Animation_qs8ej"),
"fade_to_desert": SubResource("Animation_8s448"),
"fade_to_market": SubResource("Animation_vrnr5")
}

[node name="Sfx" type="Node"]
script = ExtResource("1_mcm8r")

[node name="BonesGotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_1n7et")

[node name="DissapointedCustomerSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_dhiqe")

[node name="DesertSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_lhjhv")

[node name="MarketSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_gnggn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_olcjq")
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
